# haskell-programming-first-principles

./: .gitignore  .gitmodules  .travis.yml  README.md  haskell-programming-first-principles.cabal  stack.yaml
src/: Chapter11.hs  Chapter12.hs  Chapter15.hs  Chapter16.hs  Chapter17.hs  Chapter18.hs  Chapter19.hs  Chapter2.hs  Chapter20.hs  Chapter21.hs  Chapter22.hs  Chapter23.hs  Chapter24.hs  Chapter25.hs  Chapter26.hs  Chapter27.hs  Chapter28.hs  Chapter29.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter9.hs  CountEntries.hs  CountEntriesRevised.hs  EffectSystem.hs  GentleIntroMonadTransformers.hs  HitCounter.hs  HttpStuff.hs  Kalotans.hs  LearnParsers.hs  Lens.hs  LensExamples.hs  Lib.hs  MonadTransformerCommonPatterns.hs  Morra.hs  NaiveLensExamples.hs  OuterInner.hs  ProfilingHeapUsage.hs  ScottyTransformer.hs  (+5 more)
subprojects/additionHspec/: ChangeLog.md  Main.hs  additionHspec.cabal  stack.yaml
subprojects/fingerd/: ChangeLog.md  LICENSE  fingerd.cabal  stack.yaml
subprojects/fingerd/src/: Debug.hs
subprojects/telnetChat/: README.md  telnetChat.cabal
subprojects/telnetChat/app/: Main.hs
subprojects/telnetChat/src/: Chat.hs
subprojects/urlShortener/: README.md  stack.yaml  urlShortener.cabal
subprojects/urlShortener/app/: Main.hs
subprojects/vigenereCipher/: README.md  vigenereCipher.cabal
subprojects/vigenereCipher/src/: Caesar.hs  Lib.hs  Vigenere.hs
