name:                haskell-programming-first-principles
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-programming-first-principles#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Chapter2
                     , Chapter3
                     , Chapter4
                     , Chapter5
                     , Chapter6
                     , Chapter11
                     , Chapter12
                     , Chapter15
                     , Chapter16
                     , Chapter17
                     , Chapter18
                     , Chapter19
                     , Chapter20
                     , Chapter21
                     , Chapter22
                     , Chapter23
                     , Chapter24                     
                     , Chapter25
                     , Chapter26
                     , Morra
                     , LensExamples
                     , OuterInner
                     , SimpleTransformer
                     , CountEntries
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , transformers
                     , text
                     , uuid
                     , random
                     , mtl
                     , containers
                     , lens
                     , scotty
                     , either
                     , directory
                     , filepath
                     , course
                     , bytestring
                     , trifecta
                     , parsers
                     , time
                     , unbounded-delays
                     , concurrent-extra
                     , checkers
  default-language:    Haskell2010

executable haskell-programming-first-principles-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-programming-first-principles
                     , QuickCheck                     
                     , transformers
  default-language:    Haskell2010

test-suite haskell-programming-first-principles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-programming-first-principles
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-programming-first-principles
